added big article basics

--- a/code/index.html
+++ b/code/index.html
@@ -23,16 +23,34 @@
         <li class="nav-item"><a href="#">about</a></li>
       </ul>
     </nav>
-
-      <!-- menu for mobile -->
       
 
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
-      <h1>kebab-party</h1>
-      <p> Test text something </p>
+      <img src="./img/Three-ladies-laughing-bw.jpg" alt="women having fun" class="big-img">
+
+      <span class="line"></span>
+      <h1>
+        Aging is a 
+        woman's secret power - the data proves it
+      </h1>
+
+      <p class="big-text"> 
+        In less than 15 years, people aged 65 and up will outnumber those 18 and under for the 
+        first time in U.S. history. This major demographic shift presents a good opportunity for 
+        reevaluating our stereotypes and negative assumptions about getting older. Aging comes for us all,
+        so it’s time to tune into its upsides, particularly for women.
+      </p>
+      <p class="big-text"> 
+        Right now, older women face a double challenge of ageism and sexism, and a common response to these 
+        obstacles is to feel uncomfortable as one ages and try to hide it to the extent possible. But in fact, 
+        being older is a tremendous advantage for many women, particularly women in leadership positions. 
+        As our society shifts toward an older workforce, it’s extremely important for women to embrace their 
+        age — to both spare themselves unnecessary grief and to reach their greatest potential...
+      </p>
+
     </section>
 
     <section class="articles">
