all pictures and text in fatboxes aligned

--- a/code/index.html
+++ b/code/index.html
@@ -39,47 +39,82 @@
 
       <!-- The news boxes  -->
     <section class="info-boxes">
-      <div class="box-one">
-        <h3>Our top suggestions</h3>
+      <div class="box one">
+        <div class="text-in-fatbox">
+        <h3>Top</h3>
+        <h3>suggestions!</h3>
         <p>Find your next adventure!</p>
+        </div>
+        <div class="image-box">
         <img src="image-box-one.jpeg" alt="Picture of trail in Portugal">
+        </div>
       </div>
-      <div class="box-two">
+      <div class="box two">
+        <div class="text-in-fatbox">
         <h3>City hikes</h3>
         <p>Find trails close by</p>
+        </div>
+        <div class="image-box">
         <img src="image-box-two.jpeg" alt="Picture showing a city view">
+        </div>
       </div>
-      <div class="box-three">
-      <h3>Easy and tasty receipes</h3>
-      <p>Perfect for cooking outside</p>
-      <img src="image-box-three.jpeg" alt="Picture of cooking in nature">
+      <div class="box three">
+        <div class="text-in-fatbox">
+        <h3>Tasty receipes</h3>
+        <p>Perfect for cooking outside</p>
+        </div>
+        <div class="image-box">
+        <img src="image-box-three.jpeg" alt="Picture of cooking in nature">
+        </div>
       </div>
-      <div class="box-four">
+      <div class="box four">
+        <div class="text-in-fatbox">
         <h3>What to bring?</h3>
         <p>Find suggestions for packlist</p>
+        </div>
+        <div class="image-box">
         <img src="image-box-four.jpeg" alt="Picture of the essentials for 1day hike">
+        </div>
       </div>
-      <div class="box-five">
-        <h3>Choosing shoes</h3>
-        <p>Get our best tips!</p>
+      <div class="box five">
+        <div class="text-in-fatbox">
+        <h3>Shoe guide</h3>
+        <p>Get our best tips</p>
+        <p>when it comes to</p>
+        <p>picking shoes</p>
+        </div>
+        <div class="image-box">
         <img src="image-box-five.jpeg" alt="Picture of hiking shoes">
+        </div>
       </div>
-      <div class="box-six">
+      <div class="box six">
+        <div class="text-in-fatbox">
         <h3>Short hikes</h3>
         <p>Find suggestions on easier trails</p>
+        </div>
+        <div class="image-box">
         <img src="image-box-six.jpeg" alt="Picture of trail in the woods">
+        </div>
       </div>
-      <div class="box-seven">
+      <div class="box seven">
+        <div class="text-in-fatbox">
         <h3>Mountain hikes</h3>
         <p>Most breathtaking ones</p>
+        </div>
+        <div class="image-box">
         <img src="image-box-seven.jpeg" alt="Picture showing mountain view">
+        </div>
       </div>
-      <div class="box-eight">
+      <div class="box eight">
+        <div class="text-in-fatbox">
         <h3>Coastal hikes</h3>
         <p>Scenic trails along the coast</p>
+        </div>
+        <div class="image-box">
         <img src="image-box-eight.jpeg" alt="Picture of trail along coast of Italy">
+        </div>
       </div>
-      <div></div>
+      </div>
     </section>
   </body>
 </html>
