completed basic structure of navbar and added some basic styling

--- a/code/index.html
+++ b/code/index.html
@@ -16,7 +16,7 @@
           <header>
           <!--LOGO for Company name-->
             <div class="company-name">
-              <a href="/">Company name</a>
+              <a href="x">Company name</a>
             </div>
             <!-- NAVBAR -->
             <div class="nav-bar">
