started on tablet layout for infoboxes

--- a/code/index.html
+++ b/code/index.html
@@ -9,8 +9,10 @@
   <body>
       
     <!-- my header with logo, name and navbar -->
-    <header>
-      <img class="logo" src="logo.png" alt="logo with mountains"/>
+    <section class="header">
+      <div class="logo">
+      <img class="logo-image" src="logo.png" alt="logo with mountains"/>
+      </div>
       <h1>Hike the World</h1>
       <!-- Top Navigation Menu -->
       <div class="topnav">
@@ -21,7 +23,7 @@
         <li><a href="#About">About</a> </li>
       </ul>
     </div>
-    </header>
+    </section>
     
       <!-- The big news content -->
     <section class="big-news">
