added meta tag for responsiveness, css stylesheet link and script link to fontawesome

--- a/code/index.html
+++ b/code/index.html
@@ -2,13 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://kit.fontawesome.com/4af0a9e375.js" crossorigin="anonymous"></script>
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <img src="./logo.svg" alt="">
+      <h2>Plant power news</h2>
     </header>
 
     <section class="big-news">
