added sections, added header content and big news content

--- a/code/index.html
+++ b/code/index.html
@@ -6,21 +6,43 @@
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://kit.fontawesome.com/4af0a9e375.js" crossorigin="anonymous"></script>
-    <!-- dont forget the meta tag for responsiveness -->
   </head>
-  <body>
+  <body class="all-content-wrapper">
+   
     <header>
-      <!-- Some kind of logo and navbar -->
-      <img src="./logo.svg" alt="">
-      <h2>Plant power news</h2>
+    <!-- Header -->
+     <div class="header-logo-and-name">
+      <img class="logo" src="./images/mag-logo-oi.svg" alt="magazine-logo">
+      <h2 class="header-name">kitsch culture</h2>
+    </div>
+    <nav class="header-navigation">
+      <ul>
+        <li><a class="nav-bar button-1” href="https://www.google.com/" target="_blank">LATEST</a></li>
+        <li><a class="nav-bar button-2” href="https://www.google.com/" target="_blank">ART</a></li>
+        <li><a class="nav-bar button-3” href="https://www.google.com/" target="_blank">PLANTS</a></li>
+        <li><a class="nav-bar button-4” href="https://www.google.com/" target="_blank">ARCHITECTURE</a></li>
+        <li><a class="nav-bar button-5” href="https://www.google.com/" target="_blank">CONTACT</a></li>
+      </ul>
+    </nav>
     </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
+    <section class="big-news-content">
+      <!-- The big news -->
+      <img class="big-news-image" src="./images/birmingham-museums-trust-Kv1hYl9LlxU-unsplash.jpg" alt="painting-of-woman">
+      <div class="big-news-text-box">
+        <h2>The lonely woman</h2>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+        <a class="big-news-button" href="https://www.google.com/" target="_blank">Read more</a>
+      </div>
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <section class="small-news-content">
+      <!-- The small news  -->
     </section>
+
+    <footer>
+      <!-- The footer  -->
+    </footer>
+
   </body>
 </html>
