--- a/code/index.html
+++ b/code/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Dog parent weekly</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
@@ -9,6 +10,7 @@
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      nav
       <h1>Dog Parent Weekly</h1>
     </header>
 
