--- a/code/index.html
+++ b/code/index.html
@@ -30,15 +30,126 @@
       <!-- The big news -->
       <img class="big-news-image" src="./images/birmingham-museums-trust-Kv1hYl9LlxU-unsplash.jpg" alt="painting-of-woman">
       <div class="big-news-text-box">
-        <h2>The lonely woman</h2>
+        <h2>The hungry woman</h2>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
         <a class="big-news-button" href="https://www.google.com/" target="_blank">Read more</a>
+        <img class="big-news-small-image" src="images/plant-upsidedown.svg" alt="leaves">
       </div>
     </section>
 
     <section class="small-news-content">
       <!-- The small news  -->
-    </section>
+      <div class="small-news-big-headline">
+        <h3>LATEST STORIES!</h3>
+    </div>
+    <div class="small-news-item">
+      <div class="small-img-box">
+      <img class="small-news-img" src="./images/anton-darius-mAmq5brX5_U-unsplash.jpg" alt="">
+      <h5>ART</h5>
+      </div>
+      <div class="small-text-box">
+      <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
+      </div>
+  </div>
+  <div class="small-news-item">
+      <div class="small-img-box">
+      <img class="small-news-img" src="./images/pham-hien-triet-D0VpF1dwH18-unsplash.jpg" alt="">
+      <h5>PHOTOGRAGHY</h5>
+      </div>
+      <div class="small-text-box">
+      <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
+      </div>
+  </div>
+  <div class="small-news-item">
+      <div class="small-img-box">
+      <img class="small-news-img" src="./images/jr-korpa-zCuSa67rLEM-unsplash.jpg" alt="">
+      <h5>ART EXHIBITIONS</h5>
+      </div>
+      <div class="small-text-box">
+      <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
+      </div>
+  </div>
+  <div class="small-news-item">
+      <div class="small-img-box">
+      <img class="small-news-img" src="./images/david-clode-5jSLBVqkwN4-unsplash.jpg" alt="">
+      <h5>PLANTS</h5>
+      </div>
+      <div class="small-text-box">
+      <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
+      </div>
+  </div>
+  <div class="small-news-item">
+      <div class="small-img-box">
+      <img class="small-news-img" src="./images/mark-west-lxIDlssshjA-unsplash.jpg" alt="">
+      <h5>ARCHITECTURE</h5>
+      </div>
+      <div class="small-text-box">
+      <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
+      </div>
+  </div>
+  <div class="small-news-item">
+      <div class="small-img-box">
+      <img class="small-news-img" src="./images/luca-bravo-Fsw4uEDuQTY-unsplash.jpg" alt="">
+      <h5>PLANTS</h5>
+      </div>
+      <div class="small-text-box">
+      <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
+      </div>
+  </div>
+  <div class="small-news-item">
+      <div class="small-img-box">
+      <img class="small-news-img" src="./images/raelle-gann-owens-Nm-rqRSX810-unsplash.jpg" alt="">
+      <h5>TRAVEL</h5>
+      </div>
+      <div class="small-text-box">
+      <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
+      </div>
+  </div>
+  <div class="small-news-item">
+      <div class="small-img-box">
+      <img class="small-news-img" src="./images/isi-parente-uNWNFSgUa1c-unsplash.jpg" alt="">
+      <h5>TRAVEL</h5>
+      </div>
+      <div class="small-text-box">
+      <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
+      </div>
+  </div>
+   <div class="small-news-item">
+      <div class="small-img-box">
+      <img class="small-news-img" src="./images/frankie-cordoba-rQdriigkTQA-unsplash.jpg" alt="">
+      <h5>INTERVIEW</h5>
+      </div>
+      <div class="small-text-box">
+      <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
+      </div>
+  </div>
+  <div class="small-news-item">
+      <div class="small-img-box">
+      <img class="small-news-img" src="./images/ryan-ancill-dBrIg3Cmhjw-unsplash.jpg" alt="">
+      <h5>ARCHITECTURE</h5></div>
+      <div class="small-text-box">
+      <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
+      </div>
+  </div>
+  <div class="small-news-item">
+      <div class="small-img-box">
+      <img class="small-news-img" src="./images/ryan-ancill-1PNJjnBmiqo-unsplash.jpg" alt="">
+      <h5>TRAVEL</h5></div>
+      <div class="small-text-box">
+      <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
+      </div>
+  </div>
+  <div class="small-news-item">
+      <div class="small-img-box">
+      <img class="small-news-img" src="./images/benjamin-shurance-geJkMH8Gffc-unsplash.jpg" alt="">
+      <h5>TRAVEL</h5>
+      </div>
+      <div class="small-text-box">
+      <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
+      </div>
+  </div>
+
+</section>
 
     <footer>
       <!-- The footer  -->
