added styling to header, big news section and small news section for mobile layout

--- a/code/index.html
+++ b/code/index.html
@@ -9,7 +9,7 @@
   </head>
   <body class="all-content-wrapper">
    
-    <header>
+    <header class="header-content">
     <!-- Header -->
      <div class="header-logo-and-name">
       <img class="logo" src="./images/mag-logo-oi.svg" alt="magazine-logo">
