--- a/code/index.html
+++ b/code/index.html
@@ -11,10 +11,10 @@
   <body>
 
     <header class="header">
-
       <div class="flex-container box-1-header">
-       <img src="./logo.svg" alt="">
-        <h1 class="title">Site name</h1>
+       <img src="./waiter.svg" alt="">
+        <h1 class="title">Finer things club</h1>
+        <h4 class="header-h4">Est 2007 Scranton Pen.</h4>
       </div>
 
       <div class="flex-container box-2-header">
@@ -31,7 +31,7 @@
         <img class="big-news-img" src="https://hodinkee.imgix.net/uploads/images/f4cd1dd5-cce8-44ba-b510-87c9cd8122d7/L1020900.jpg?ixlib=rails-1.1.0&amp;fm=jpg&amp;q=55&amp;auto=format&amp;usm=12&amp;fit=crop&amp;ch=Width%2CDPR%2CSave-Data&amp;alt=" alt="image of a watch">
         <div class="big-news-head-text"><h3 class= "big-news-title"> We Respond To Your Comments Regarding GMTs, Rainbows, and More</h3>
         <h4 class="big-news-ingress">Your final thoughts of 2022 meet some of our first thoughts of 2023.</h4>
-        <p class="big-news-text">here does the time go?? It seems like just yesterday we were all giddy with anticipation for the holiday season and taking stock of all that the year 2022 had blessed us with. Refusing to fully return to the January grind, we took..</p>
+        <p class="big-news-text">Where does the time go?? It seems like just yesterday we were all giddy with anticipation for the holiday season and taking stock of all that the year 2022 had blessed us with. Refusing to fully return to the January grind, we took..</p>
         <button class="big-news-button"> read more</button>
       </div>
 
@@ -41,45 +41,45 @@
       <!-- The other news  -->
 
       <div class="other-news-articles article-a">
-        <img src="https://hips.hearstapps.com/hmg-prod/images/2023-jewelry-trends-index-1671489767.jpg?crop=0.502xw:1.00xh;0.250xw,0&amp;resize=320:*" alt=" img of jewelry">
-        <h3>The 8 Jewelry Trends That Will Be Everywhere in 2023—Shop Them Now</h3>
-        <p>For most of us, jewelry is the last thing we put on before heading out for the day. It makes sense; even if you´re sporting the lingerie-as-daywear trend, you still need to prioritize covering your body before you accent it with glimmering baubles. But, rather than letting... </p>
-        <button> read more</button>
+        <img class="other-news-img" src="https://hips.hearstapps.com/hmg-prod/images/2023-jewelry-trends-index-1671489767.jpg?crop=0.502xw:1.00xh;0.250xw,0&amp;resize=320:*" alt=" img of jewelry">
+        <h3 class="other-news-h3">The 8 Jewelry Trends That Will Be Everywhere in 2023</h3>
+        <p class="other-news-p">For most of us, jewelry is the last thing we put on before heading out for the day. It makes sense; even if you´re sporting the lingerie-as-daywear trend, you still need to prioritize covering your body before you accent it with glimmering baubles. But, rather than letting... </p>
+        <button class="other-news-button"> read more</button>
       </div>
 
       <div class="other-news-articles article-b">
-        <img src="https://hips.hearstapps.com/hmg-prod/images/2023-jewelry-trends-index-1671489767.jpg?crop=0.502xw:1.00xh;0.250xw,0&amp;resize=320:*" alt=" img of jewelry">
-        <h3>The 8 Jewelry Trends That Will Be Everywhere in 2023—Shop Them Now</h3>
+        <img class="other-news-img" src="https://hips.hearstapps.com/hmg-prod/images/2023-jewelry-trends-index-1671489767.jpg?crop=0.502xw:1.00xh;0.250xw,0&amp;resize=320:*" alt=" img of jewelry">
+        <h3>The 8 Jewelry Trends That Will Be Everywhere in 2023</h3>
         <p>For most of us, jewelry is the last thing we put on before heading out for the day. It makes sense; even if you´re sporting the lingerie-as-daywear trend, you still need to prioritize covering your body before you accent it with glimmering baubles. But, rather than letting... </p>
-        <button> read more</button>
+        <button class="other-news-button"> read more</button>
       </div>
 
       <div class="other-news-articles article-c">
-        <img src="https://hips.hearstapps.com/hmg-prod/images/2023-jewelry-trends-index-1671489767.jpg?crop=0.502xw:1.00xh;0.250xw,0&amp;resize=320:*" alt=" img of jewelry">
-        <h3>The 8 Jewelry Trends That Will Be Everywhere in 2023—Shop Them Now</h3>
+        <img class="other-news-img" src="https://hips.hearstapps.com/hmg-prod/images/2023-jewelry-trends-index-1671489767.jpg?crop=0.502xw:1.00xh;0.250xw,0&amp;resize=320:*" alt=" img of jewelry">
+        <h3>The 8 Jewelry Trends That Will Be Everywhere in 2023</h3>
         <p>For most of us, jewelry is the last thing we put on before heading out for the day. It makes sense; even if you´re sporting the lingerie-as-daywear trend, you still need to prioritize covering your body before you accent it with glimmering baubles. But, rather than letting... </p>
-        <button> read more</button>
+        <button class="other-news-button"> read more</button>
       </div>
 
       <div class="other-news-articles article-d">
-        <img src="https://hips.hearstapps.com/hmg-prod/images/2023-jewelry-trends-index-1671489767.jpg?crop=0.502xw:1.00xh;0.250xw,0&amp;resize=320:*" alt=" img of jewelry">
-        <h3>The 8 Jewelry Trends That Will Be Everywhere in 2023—Shop Them Now</h3>
+        <img class="other-news-img" src="https://hips.hearstapps.com/hmg-prod/images/2023-jewelry-trends-index-1671489767.jpg?crop=0.502xw:1.00xh;0.250xw,0&amp;resize=320:*" alt=" img of jewelry">
+        <h3>The 8 Jewelry Trends That Will Be Everywhere in 2023</h3>
         <p>For most of us, jewelry is the last thing we put on before heading out for the day. It makes sense; even if you´re sporting the lingerie-as-daywear trend, you still need to prioritize covering your body before you accent it with glimmering baubles. But, rather than letting... </p>
-        <button> read more</button>
+        <button class="other-news-button"> read more</button>
       </div>
 
       <div class="other-news-articles article-e">
-        <img src="https://hips.hearstapps.com/hmg-prod/images/2023-jewelry-trends-index-1671489767.jpg?crop=0.502xw:1.00xh;0.250xw,0&amp;resize=320:*" alt=" img of jewelry">
-        <h3>The 8 Jewelry Trends That Will Be Everywhere in 2023—Shop Them Now</h3>
+        <img class="other-news-img" src="https://hips.hearstapps.com/hmg-prod/images/2023-jewelry-trends-index-1671489767.jpg?crop=0.502xw:1.00xh;0.250xw,0&amp;resize=320:*" alt=" img of jewelry">
+        <h3>The 8 Jewelry Trends That Will Be Everywhere in 2023</h3>
         <p>For most of us, jewelry is the last thing we put on before heading out for the day. It makes sense; even if you´re sporting the lingerie-as-daywear trend, you still need to prioritize covering your body before you accent it with glimmering baubles. But, rather than letting... </p>
-        <button> read more</button>
+        <button class="other-news-button"> read more</button>
       </div>
 
       <div class="other-news-articles article-f">
-        <img src="https://hips.hearstapps.com/hmg-prod/images/2023-jewelry-trends-index-1671489767.jpg?crop=0.502xw:1.00xh;0.250xw,0&amp;resize=320:*" alt=" img of jewelry">
-        <h3>The 8 Jewelry Trends That Will Be Everywhere in 2023—Shop Them Now</h3>
+        <img class="other-news-img" src="https://hips.hearstapps.com/hmg-prod/images/2023-jewelry-trends-index-1671489767.jpg?crop=0.502xw:1.00xh;0.250xw,0&amp;resize=320:*" alt=" img of jewelry">
+        <h3>The 8 Jewelry Trends That Will Be Everywhere in 2023</h3>
         <p>For most of us, jewelry is the last thing we put on before heading out for the day. It makes sense; even if you´re sporting the lingerie-as-daywear trend, you still need to prioritize covering your body before you accent it with glimmering baubles. But, rather than letting... </p>
-        <button> read more</button>
+        <button class="other-news-button"> read more</button>
       </div>
 
 
