tablet header layout done. Started on layout for info-boxes on desktop

--- a/code/index.html
+++ b/code/index.html
@@ -15,14 +15,14 @@
       </div>
       <h1>Hike the World</h1>
       <!-- Top Navigation Menu -->
-      <div class="topnav">
+      <div class="navbar">
       <ul>
         <li><a href="#Home">Home</a> </li>
         <li><a href="#News">News</a> </li>
         <li><a href="#Contact">Contact</a> </li>
         <li><a href="#About">About</a> </li>
       </ul>
-    </div>
+      </div>
     </section>
     
       <!-- The big news content -->
@@ -43,8 +43,7 @@
     <section class="info-boxes">
       <div class="box one">
         <div class="text-in-fatbox">
-        <h3>Top</h3>
-        <h3>suggestions!</h3>
+        <h3>Top trails</h3>
         <p>Find your next adventure!</p>
         </div>
         <div class="image-box">
@@ -81,9 +80,7 @@
       <div class="box five">
         <div class="text-in-fatbox">
         <h3>Shoe guide</h3>
-        <p>Get our best tips</p>
-        <p>when it comes to</p>
-        <p>picking shoes</p>
+        <p>Our best tips for shoes</p>
         </div>
         <div class="image-box">
         <img src="image-box-five.jpeg" alt="Picture of hiking shoes">
