Grid text added

--- a/code/index.html
+++ b/code/index.html
@@ -41,18 +41,49 @@
     </section>
 
     <section class="grid-parent">
-      <div class="grid-item square1"> <img src="https://img-cdn.tnwcdn.com/image?fit=432%2C244&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2023%2F01%2FSPEAKer.jpg&signature=f318251dfebcecc8dc5265fe76a58c0b" alt=""></div>
-      <div class="grid-item square2"><img src="https://img-cdn.tnwcdn.com/image?fit=432%2C244&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2022%2F12%2FUntitled-design-1-3.jpg&signature=d3f113d295e31c071c9a958bd1fd08de" alt=""></div>
-      <div class="grid-item square3"><img src="https://img-cdn.tnwcdn.com/image?fit=432%2C244&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2023%2F01%2Fheader-image-evernote-acquired.jpg&signature=d40d85795c0cf9d4ac0127e2d3fa78e1" alt=""></div>
-      <div class="grid-item square4"><img src="https://img-cdn.tnwcdn.com/image?fit=432%2C244&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2023%2F01%2FCam_03_UPDATE.jpg&signature=990058daec0f5e750b48a7987c3b594a" alt=""></div>
-      <div class="grid-item square5"><img src="https://img-cdn.tnwcdn.com/image?fit=432%2C244&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2022%2F12%2FUntitled-design-97-7.jpg&signature=8a91c426773cb9181ae8830dc0cd7779" alt=""></div>
-      <div class="grid-item square6"><img src="https://img-cdn.tnwcdn.com/image?fit=432%2C244&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2023%2F01%2FUntitled-design.jpg&signature=7e623c83d951195024435fb9bc776133" alt=""></div>
-      <div class="grid-item square7"><img src="https://img-cdn.tnwcdn.com/image?fit=432%2C244&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2023%2F01%2FUntitled-design-97.jpg&signature=cdafade74c20087ea6e502073b5be8d5" alt=""></div>
-      <div class="grid-item square8"><img src="https://img-cdn.tnwcdn.com/image?fit=280%2C158&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2022%2F12%2FUntitled-design-2-3.jpg&signature=d29d603f15159e87436481a8f6f514e4" alt=""></div>
-      <div class="grid-item square9"><img src="https://img-cdn.tnwcdn.com/image?fit=280%2C158&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2023%2F01%2FUntitled-design-1.jpg&signature=da3bd34e28b2a052d0d5ed7d0965d8d3" alt=""></div>
-      <div class="grid-item square10"><img src="https://img-cdn.tnwcdn.com/image?fit=280%2C158&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2022%2F12%2Fsmart-glasses.jpeg&signature=9e52f486df2c9b66d04c01a2f8944eef" alt=""></div>
-      <div class="grid-item square11"><img src="https://img-cdn.tnwcdn.com/image?fit=280%2C158&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2022%2F12%2FUntitled-design-3-2.jpg&signature=5090db90f5a7c34b1d4ac23b1418124e" alt=""></div>
-      <div class="grid-item square12"><img src="https://img-cdn.tnwcdn.com/image?fit=280%2C158&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2023%2F01%2FUntitled-design-97-1.jpg&signature=a7f3a92b8312176663a392577f5d0112" alt=""></div>
+      <div class="grid-item square1"> <img src="https://img-cdn.tnwcdn.com/image?fit=432%2C244&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2023%2F01%2FSPEAKer.jpg&signature=f318251dfebcecc8dc5265fe76a58c0b" alt="">
+      <h3>Local</h3>
+      <p>Firecrackers, firecrackers, firecrackers!</p>
+      </div>
+      <div class="grid-item square2"><img src="https://img-cdn.tnwcdn.com/image?fit=432%2C244&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2022%2F12%2FUntitled-design-1-3.jpg&signature=d3f113d295e31c071c9a958bd1fd08de" alt="">
+        <h3>Economy</h3>
+        <p>Inflation, inflation, inflation!</p>
+      </div>
+      <div class="grid-item square3"><img src="https://img-cdn.tnwcdn.com/image?fit=432%2C244&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2023%2F01%2Fheader-image-evernote-acquired.jpg&signature=d40d85795c0cf9d4ac0127e2d3fa78e1" alt="">
+        <h3>Europe</h3>
+        <p>War, war, war!</p>
+      </div>
+      <div class="grid-item square4"><img src="https://img-cdn.tnwcdn.com/image?fit=432%2C244&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2023%2F01%2FCam_03_UPDATE.jpg&signature=990058daec0f5e750b48a7987c3b594a" alt="">
+        <h3>Economy</h3>
+        <p>Inflation, inflation, inflation!</p>
+      </div>
+      <div class="grid-item square5"><img src="https://img-cdn.tnwcdn.com/image?fit=432%2C244&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2022%2F12%2FUntitled-design-97-7.jpg&signature=8a91c426773cb9181ae8830dc0cd7779" alt="">
+        <h3>Economy</h3>
+        <p>Inflation, inflation, inflation!</p></div>
+      <div class="grid-item square6"><img src="https://img-cdn.tnwcdn.com/image?fit=432%2C244&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2023%2F01%2FUntitled-design.jpg&signature=7e623c83d951195024435fb9bc776133" alt="">
+        <h3>Economy</h3>
+        <p>Inflation, inflation, inflation!</p></div>
+      <div class="grid-item square7"><img src="https://img-cdn.tnwcdn.com/image?fit=432%2C244&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2023%2F01%2FUntitled-design-97.jpg&signature=cdafade74c20087ea6e502073b5be8d5" alt="">
+        <h3>Economy</h3>
+        <p>Inflation, inflation, inflation!</p></div>
+      <div class="grid-item square8"><img src="https://img-cdn.tnwcdn.com/image?fit=280%2C158&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2022%2F12%2FUntitled-design-2-3.jpg&signature=d29d603f15159e87436481a8f6f514e4" alt="">
+        <h3>Economy</h3>
+        <p>Inflation, inflation, inflation!</p></div>
+      <div class="grid-item square9"><img src="https://img-cdn.tnwcdn.com/image?fit=280%2C158&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2023%2F01%2FUntitled-design-1.jpg&signature=da3bd34e28b2a052d0d5ed7d0965d8d3" alt="">
+        <h3>Economy</h3>
+        <p>Inflation, inflation, inflation!</p>
+      </div>
+      <div class="grid-item square10"><img src="https://img-cdn.tnwcdn.com/image?fit=280%2C158&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2022%2F12%2Fsmart-glasses.jpeg&signature=9e52f486df2c9b66d04c01a2f8944eef" alt="">
+        <h3>Economy</h3>
+        <p>Inflation, inflation, inflation!</p>
+      </div>
+      <div class="grid-item square11"><img src="https://img-cdn.tnwcdn.com/image?fit=280%2C158&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2022%2F12%2FUntitled-design-3-2.jpg&signature=5090db90f5a7c34b1d4ac23b1418124e" alt="">
+        <h3>Economy</h3>
+        <p>Inflation, inflation, inflation!</p>
+      </div>
+      <div class="grid-item square12"><img src="https://img-cdn.tnwcdn.com/image?fit=280%2C158&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2023%2F01%2FUntitled-design-97-1.jpg&signature=a7f3a92b8312176663a392577f5d0112" alt="">
+        <h3>Economy</h3>
+        <p>Inflation, inflation, inflation!</p></div>
       <!-- The other news  -->
     </section>
   </body>
