--- a/code/index.html
+++ b/code/index.html
@@ -17,6 +17,7 @@
           <ul>
             <li><a href="#">Latest</a></li>
             <li><a href="#">Politics</a></li>
+            <li><a href="#">Economy</a></li>
             <li><a href="#">Entertainment</a></li>
             <li><a href="#">Events</a></li>
             <li><a href="#">Contact us</a></li>
@@ -33,9 +34,15 @@
         alt="Main article"
       />
       <h2>
-        BREAKING:The UK counts down to its first ever orbital satellite launch
+        BREAKING: The UK counts down to its first ever orbital satellite launch
         (Update: the mission failed)
       </h2>
+
+      <p>The first ever orbital satellite launch from the UK — and Europe — was set for takeoff on Monday, January 9. The so-called “Start Me UP” mission, led by US-based Virgin Orbit, set out from Spaceport Cornwall at Newquay Airport at around 21:15 UTC.
+
+      At the center of the mission was a modified Boeing 747 aircraft, the Cosmic Girl, fitted with Virgin Orbit’s Launcher One rocket, which was carrying nine civil and defense satellites.
+        
+      Interested viewers who watched the launch via Virgin Orbit’s livestream below were faced with disappointment: the mission failed.</p>
 
       <!-- The big news content -->
     </section>
@@ -87,4 +94,12 @@
       <!-- The other news  -->
     </section>
   </body>
+
+  <footer>
+    <section class="website-footer">
+<h4>Get the TNW newsletter
+  Getting to the heart of the European tech and startup scene. <br> Source: Trust me bro!</h4>
+
+    </section>
+  </footer>
 </html>
