new header and icon

--- a/code/index.html
+++ b/code/index.html
@@ -4,10 +4,26 @@
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
+      <!--Start of header-->
+      <div class="header">
+        <a href="#Home"><img src="./icon-parrot.png" alt="home-icon"></a>
+        <a href="#Home" class="logo">Loro News</a>
+          <div class="header-right">
+            <a href="#home">Home</a>
+            <a href="#contact">Contact</a>
+            <a href="#about">About</a>
+          </div>
+      </div>
+
+
+    
+
+
       <!-- Some kind of logo and navbar -->
     </header>
 
