--- a/code/index.html
+++ b/code/index.html
@@ -15,14 +15,22 @@
       </div>
       <h1>Hike the World</h1>
       <!-- Top Navigation Menu -->
-      <div class="navbar">
-      <ul>
-        <li><a href="#Home">Home</a> </li>
-        <li><a href="#News">News</a> </li>
-        <li><a href="#Contact">Contact</a> </li>
-        <li><a href="#About">About</a> </li>
-      </ul>
-      </div>
+      <label for=trigger>
+        <input type="checkbox" class="trigger" id="trigger" />
+        <div class="hamburger">
+             <span></span>
+             <span></span>
+             <span></span>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="#">Home</a> </li>
+            <li><a href="#">News</a> </li>
+            <li><a href="#">Contact</a> </li>
+            <li><a href="#">About</a> </li>
+            </ul>
+        </nav>
+        </label>  
     </section>
     
       <!-- The big news content -->
