--- a/code/index.html
+++ b/code/index.html
@@ -5,58 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
+    <script
+      src="https://kit.fontawesome.com/818262a977.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Technigo News Site - Michelle Wegler</title>
   </head>
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
-      <nav class="navbar navbar-expand-lg fixed-top">
+      <nav class="navbar">
         <div class="container">
-          <a class="navbar-brand" href="#"
+          <a href="#"
             ><img
               src="../img/a_cat.jpg"
               alt="logo"
               title="Logo, black cat"
-              class="img-fluid logo-nav"
+              class="logo-nav"
           /></a>
-          <button
-            class="navbar-toggler navbar-light bg-light"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
           <div class="container">
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a
-                    class="nav-link active"
-                    aria-current="page"
-                    href="#"
-                    title="Home"
+            <div>
+              <ul>
+                <li>
+                  <a class="active" aria-current="page" href="#" title="Home"
                     >Home</a
                   >
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="tips.html" title="Tips">Tips</a>
+                <li>
+                  <a href="./tips.html" title="Tips">Tips</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="quotes.html" title="Quotes"
-                    >Quotes</a
+                <li>
+                  <a href="quotes.html" title="Quotes & Memes"
+                    >Quotes & Memes</a
                   >
                 </li>
-                <li class="nav-item">
-                  <a
-                    class="nav-link"
-                    href="contact.html#contact"
-                    title="Contact"
-                    >Contact</a
-                  >
+                <li>
+                  <a href="contact.html#contact" title="Contact">Contact</a>
                 </li>
               </ul>
             </div>
@@ -69,23 +53,27 @@
     <section class="big-news">
       <!-- The big news content -->
       <div class="container">
-        <div class="flex-parent-big-news">
-          <div class="flex-child-big-news">
-            <img
-              src="../img/sunSalutatingCat.jpg"
-              class="img-big-news"
-              alt="Smirre Training App"
-              title="Smirre Training"
-            />
+        <div class="flex-parent grid-parent">
+          <div class="flex-child grid-child-big-news">
+            <div class="big-news">
+              <img
+                src="../img/sunSalutatingCat.jpg"
+                class="img-big-news"
+                alt="Smirre Training App"
+                title="Smirre Training"
+              />
+            </div>
           </div>
-          <div class="flex-child-big-news">
-            <h2>The Latest Rage - Yoga for Cats!</h2>
-            <p>
-              Yoga Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Architecto aperiam odit sed fugit alias, distinctio molestiae
-              expedita repellendus amet impedit sint sit iure voluptatem eius
-              quisquam quam atque velit. Cumque?
-            </p>
+          <div class="flex-child grid-child-big-news">
+            <div class="big-news">
+              <h2>The Latest Rage - Yoga for Cats!</h2>
+              <p>
+                Yoga Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Architecto aperiam odit sed fugit alias, distinctio molestiae
+                expedita repellendus amet impedit sint sit iure voluptatem eius
+                quisquam quam atque velit. Cumque?
+              </p>
+            </div>
           </div>
         </div>
       </div>
@@ -98,44 +86,34 @@
         On mobile: one card on each row. -->
     </section>
     <footer>
-      <div class="container">
-        <div class="footer-container">
-          <div class="d-flex justify-content-center">
-            <div class="ml-5 mt-3">
-              <a href="#">
-                <img
-                  src="../img/a_cat.jpg"
-                  alt="Logo, black cat"
-                  title="Logo, black cat"
-                  class="logo"
-              /></a>
-              <span class="logoTextSpan ml-3 mr-5"
-                >Michelle Wegler 2022, open source</span
-              >
-            </div>
-          </div>
-          <div class="d-flex justify-content-center">
-            <div class="d-flex mt-3 mb-3">
-              <a
-                href="https://www.linkedin.com/in/michellewegler/"
-                title="Linkedin Profile"
-                target="_blank"
-                rel="noopener noreferrer"
-                ><i class="fa-brands fa-linkedin" aria-hidden="true"></i
-                ><span class="sr-only">Linkedin</span></a
-              >
-            </div>
-            <div class="d-flex mr-5 mt-3 mb-3">
-              <a
-                href="https://github.com/smirrebinx/Responsive-Portfolio.git"
-                title="Github Profile"
-                target="_blank"
-                rel="noopener noreferrer"
-                ><i class="fab fa-github" aria-hidden="true"></i
-                ><span class="sr-only">Github</span></a
-              >
-            </div>
-          </div>
+      <div class="logo">
+        <img
+          src="../img/a_cat.jpg"
+          alt="Logo, black cat"
+          title="Logo, black cat"
+        />
+        <span class="logoTextSpan">Michelle Wegler 2023</span>
+      </div>
+      <div class="flex-parent">
+        <div class="flex-child">
+          <a
+            href="https://www.linkedin.com/in/michellewegler/"
+            title="Linkedin Profile"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fa-brands fa-linkedin" aria-hidden="true"></i
+            ><span class="sr-only">Linkedin</span></a
+          >
+        </div>
+        <div class="flex-child">
+          <a
+            href="https://github.com/smirrebinx/Responsive-Portfolio.git"
+            title="Github Profile"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fab fa-github" aria-hidden="true"></i
+            ><span class="sr-only">Github</span></a
+          >
         </div>
       </div>
     </footer>
