--- a/code/index.html
+++ b/code/index.html
@@ -3,27 +3,27 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/gxp2wtj.css">
     <script src="https://kit.fontawesome.com/4af0a9e375.js" crossorigin="anonymous"></script>
   </head>
   <body class="all-content-wrapper">
    
     <header class="header-content">
     <!-- Header -->
-     <div class="header-logo-and-name">
-      <img class="logo" src="./images/mag-logo-oi.svg" alt="magazine-logo">
-      <h2 class="header-name">kitsch culture</h2>
-    </div>
-    <nav class="header-navigation">
-      <ul>
-        <li><a class="nav-bar button-1” href="https://www.google.com/" target="_blank">LATEST</a></li>
-        <li><a class="nav-bar button-2” href="https://www.google.com/" target="_blank">ART</a></li>
-        <li><a class="nav-bar button-3” href="https://www.google.com/" target="_blank">PLANTS</a></li>
-        <li><a class="nav-bar button-4” href="https://www.google.com/" target="_blank">ARCHITECTURE</a></li>
-        <li><a class="nav-bar button-5” href="https://www.google.com/" target="_blank">CONTACT</a></li>
-      </ul>
-    </nav>
+        <img class="logo" src="./images/mag-logo-oi.svg" alt="magazine-logo">
+        <h1 class="header-name">kitsch culture</h1>
+      <nav class="header-navigation">
+        <ul class="nav-bar">  
+          <li><a class="nav-item button-1" href="https://www.google.com" target="_blank">LATEST</a></li>
+          <li><a class="nav-item button-2" href="https://www.google.com" target="_blank">ART</a></li>
+          <li><a class="nav-item button-3" href="https://www.google.com" target="_blank">PLANTS</a></li>
+          <li><a class="nav-item button-4" href="https://www.google.com" target="_blank">ARCHITECTURE</a></li>
+          <li><a class="nav-item button-5" href="https://www.google.com" target="_blank">CONTACT</a></li>
+        </ul>
+      </nav>
     </header>
 
     <section class="big-news-content">
@@ -31,128 +31,136 @@
       <img class="big-news-image" src="./images/birmingham-museums-trust-Kv1hYl9LlxU-unsplash.jpg" alt="painting-of-woman">
       <div class="big-news-text-box">
         <h2>The hungry woman</h2>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+        <p class="big-news-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
         <a class="big-news-button" href="https://www.google.com/" target="_blank">Read more</a>
         <img class="big-news-small-image" src="images/plant-upsidedown.svg" alt="leaves">
       </div>
     </section>
 
     <section class="small-news-content">
-      <!-- The small news  -->
+        <!-- The small news  -->
       <div class="small-news-big-headline">
-        <h3>LATEST STORIES!</h3>
-    </div>
-    <div class="small-news-item">
-      <div class="small-img-box">
-      <img class="small-news-img" src="./images/anton-darius-mAmq5brX5_U-unsplash.jpg" alt="">
-      <h5>ART</h5>
+          <h3>LATEST STORIES!</h3></div>
+      <div class="small-news-item">
+        <div class="small-img-box">
+          <img class="small-news-img" src="./images/anton-darius-mAmq5brX5_U-unsplash.jpg" alt="">
+          <h5>ART</h5>
+        </div>
+        <div class="small-text-box">
+          <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
+        </div></div>
+      <div class="small-news-item">
+        <div class="small-img-box">
+          <img class="small-news-img" src="./images/pham-hien-triet-D0VpF1dwH18-unsplash.jpg" alt="">
+          <h5>PHOTOGRAGHY</h5>
+        </div>
+        <div class="small-text-box">
+          <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
+        </div>
       </div>
-      <div class="small-text-box">
-      <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
+      <div class="small-news-item">
+        <div class="small-img-box">
+          <img class="small-news-img" src="./images/jr-korpa-zCuSa67rLEM-unsplash.jpg" alt="">
+          <h5>ART EXHIBITIONS</h5>
+        </div>
+        <div class="small-text-box">
+          <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
+        </div>
       </div>
-  </div>
-  <div class="small-news-item">
-      <div class="small-img-box">
-      <img class="small-news-img" src="./images/pham-hien-triet-D0VpF1dwH18-unsplash.jpg" alt="">
-      <h5>PHOTOGRAGHY</h5>
+      <div class="small-news-item">
+        <div class="small-img-box">
+          <img class="small-news-img" src="./images/david-clode-5jSLBVqkwN4-unsplash.jpg" alt="">
+          <h5>PLANTS</h5>
+        </div>
+        <div class="small-text-box">
+          <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
+        </div>
       </div>
-      <div class="small-text-box">
-      <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
+      <div class="small-news-item">
+        <div class="small-img-box">
+          <img class="small-news-img" src="./images/mark-west-lxIDlssshjA-unsplash.jpg" alt="">
+          <h5>ARCHITECTURE</h5>
+        </div>
+        <div class="small-text-box">
+          <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
+        </div>
       </div>
-  </div>
-  <div class="small-news-item">
-      <div class="small-img-box">
-      <img class="small-news-img" src="./images/jr-korpa-zCuSa67rLEM-unsplash.jpg" alt="">
-      <h5>ART EXHIBITIONS</h5>
+      <div class="small-news-item">
+          <div class="small-img-box">
+            <img class="small-news-img" src="./images/luca-bravo-Fsw4uEDuQTY-unsplash.jpg" alt="">
+            <h5>PLANTS</h5>
+          </div>
+          <div class="small-text-box">
+            <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
+          </div>
       </div>
-      <div class="small-text-box">
-      <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
+      <div class="small-news-item">
+        <div class="small-img-box">
+            <img class="small-news-img" src="./images/raelle-gann-owens-Nm-rqRSX810-unsplash.jpg" alt="">
+            <h5>TRAVEL</h5>
+        </div>
+        <div class="small-text-box">
+          <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
+        </div>
       </div>
-  </div>
-  <div class="small-news-item">
-      <div class="small-img-box">
-      <img class="small-news-img" src="./images/david-clode-5jSLBVqkwN4-unsplash.jpg" alt="">
-      <h5>PLANTS</h5>
+      <div class="small-news-item">
+        <div class="small-img-box">
+          <img class="small-news-img" src="./images/isi-parente-uNWNFSgUa1c-unsplash.jpg" alt="">
+          <h5>TRAVEL</h5>
+        </div>
+          <div class="small-text-box">
+            <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
+          </div>
       </div>
-      <div class="small-text-box">
-      <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
+      <div class="small-news-item">
+        <div class="small-img-box">
+          <img class="small-news-img" src="./images/frankie-cordoba-rQdriigkTQA-unsplash.jpg" alt="">
+          <h5>INTERVIEW</h5>
+        </div>
+        <div class="small-text-box">
+          <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
+        </div>
       </div>
-  </div>
-  <div class="small-news-item">
-      <div class="small-img-box">
-      <img class="small-news-img" src="./images/mark-west-lxIDlssshjA-unsplash.jpg" alt="">
-      <h5>ARCHITECTURE</h5>
+      <div class="small-news-item">
+        <div class="small-img-box">
+          <img class="small-news-img" src="./images/ryan-ancill-dBrIg3Cmhjw-unsplash.jpg" alt="">
+          <h5>ARCHITECTURE</h5></div>
+        <div class="small-text-box">
+          <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4></div>
       </div>
-      <div class="small-text-box">
-      <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
+      <div class="small-news-item">
+        <div class="small-img-box">
+          <img class="small-news-img" src="./images/ryan-ancill-1PNJjnBmiqo-unsplash.jpg" alt="">
+          <h5>TRAVEL</h5></div>
+        <div class="small-text-box">
+          <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4></div>
       </div>
-  </div>
-  <div class="small-news-item">
-      <div class="small-img-box">
-      <img class="small-news-img" src="./images/luca-bravo-Fsw4uEDuQTY-unsplash.jpg" alt="">
-      <h5>PLANTS</h5>
+      <div class="small-news-item">
+        <div class="small-img-box">
+          <img class="small-news-img" src="./images/benjamin-shurance-geJkMH8Gffc-unsplash.jpg" alt="">
+          <h5>TRAVEL</h5></div>
+        <div class="small-text-box">
+          <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4></div>
       </div>
-      <div class="small-text-box">
-      <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
-      </div>
-  </div>
-  <div class="small-news-item">
-      <div class="small-img-box">
-      <img class="small-news-img" src="./images/raelle-gann-owens-Nm-rqRSX810-unsplash.jpg" alt="">
-      <h5>TRAVEL</h5>
-      </div>
-      <div class="small-text-box">
-      <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
-      </div>
-  </div>
-  <div class="small-news-item">
-      <div class="small-img-box">
-      <img class="small-news-img" src="./images/isi-parente-uNWNFSgUa1c-unsplash.jpg" alt="">
-      <h5>TRAVEL</h5>
-      </div>
-      <div class="small-text-box">
-      <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
-      </div>
-  </div>
-   <div class="small-news-item">
-      <div class="small-img-box">
-      <img class="small-news-img" src="./images/frankie-cordoba-rQdriigkTQA-unsplash.jpg" alt="">
-      <h5>INTERVIEW</h5>
-      </div>
-      <div class="small-text-box">
-      <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
-      </div>
-  </div>
-  <div class="small-news-item">
-      <div class="small-img-box">
-      <img class="small-news-img" src="./images/ryan-ancill-dBrIg3Cmhjw-unsplash.jpg" alt="">
-      <h5>ARCHITECTURE</h5></div>
-      <div class="small-text-box">
-      <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
-      </div>
-  </div>
-  <div class="small-news-item">
-      <div class="small-img-box">
-      <img class="small-news-img" src="./images/ryan-ancill-1PNJjnBmiqo-unsplash.jpg" alt="">
-      <h5>TRAVEL</h5></div>
-      <div class="small-text-box">
-      <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
-      </div>
-  </div>
-  <div class="small-news-item">
-      <div class="small-img-box">
-      <img class="small-news-img" src="./images/benjamin-shurance-geJkMH8Gffc-unsplash.jpg" alt="">
-      <h5>TRAVEL</h5>
-      </div>
-      <div class="small-text-box">
-      <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
-      </div>
-  </div>
-
-</section>
+    </section>
 
     <footer>
       <!-- The footer  -->
+      <img class="footer-logo" src="./images/mag-logo-oi.png" alt="">
+      <div class="footer-icons">
+          <i class="fa-brands fa-square-facebook"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-youtube"></i>
+          <i class="fa-brands fa-pinterest"></i>
+          <i class="fa-brands fa-tumblr"></i></div>
+      <nav class="footer-nav-bar">
+          <a class="footer-nav-item" href="https://www.google.com" target="_blank">about us</a>
+          <a class="footer-nav-item" href="https://www.google.com" target="_blank">contact</a>
+          <a class="footer-nav-item" href="https://www.google.com" target="_blank">store</a>
+          <a class="footer-nav-item" href="https://www.google.com" target="_blank">terms</a>
+      </nav>
+      <p class="footer-copyright">© kitsch culture 2023</p>
     </footer>
 
   </body>
