--- a/code/index.html
+++ b/code/index.html
@@ -10,12 +10,14 @@
     <header>
       <!-- Some kind of logo and navbar -->
     </header>
+    <h1> The empty plate</h1>
+    <H2>Lissabon Issue</H2>
 
     <section class="big-news">
       <!-- The big news content -->
     </section>
 
-    <section class="">
+    <section class="Small-News">
       <!-- The other news  -->
     </section>
   </body>
